--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "devDependencies": {
     "ejs": "^2.6.1",
     "express": "^4.16.3",
+    "formidable": "^1.2.1",
+    "multer": "^1.3.1",
     "supervisor": "^0.12.0"
   }
 }
